--- a/style.css
+++ b/style.css
@@ -7,15 +7,57 @@ body {
   padding-bottom: 0.5rem;
   background-color: lightgray;
 }
-.nav {
-  display: flex;
+.topnav {
   background-color: rgb(242, 107, 129);
+  color: white;
+  overflow: hidden;
+  display: flex;
   justify-content: space-around;
-  padding: 1.3%;
-  align-items: center;
-  font-weight: 900;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  letter-spacing: 3px;
+  font-weight: bold;
+}
+
+.topnav a:hover {
+  color: black;
+}
+
+.topnav a.active {
+  color: black;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
 .section1 {
   display: flex;
